email entry banner alignment fix

--- a/react_webviews/src/external_portfolio/components/Style.scss
+++ b/react_webviews/src/external_portfolio/components/Style.scss
@@ -89,10 +89,10 @@ $light_periwinkle: #d3dbe4;
 }
 
 .fisdom-bg {
-  background: url(../../assets/fisdom/banner_ext_pf.svg) no-repeat bottom right/245px 164px;
+  background: url(../../assets/fisdom/banner_ext_pf.svg) no-repeat bottom right/180px 120px;
 }
 .myway-bg {
-  background: url(../../assets/finity/banner_ext_pf.svg) no-repeat bottom right/245px 164px;
+  background: url(../../assets/finity/banner_ext_pf.svg) no-repeat bottom right/180px 120px;
 }
 
 .cams-steps-title {
